--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/all": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
+    "framer-motion": "^12.0.1",
     "mixitup": "^3.3.2",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
@@ -16,6 +19,8 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
+    "react-tag-cloud": "^1.3.3",
+    "react-vertical-timeline-component": "^3.5.3",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +49,11 @@
     ]
   },
   "devDependencies": {
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "tailwindcss": "^3.4.14"
+  },
+  "resolutions": {
+    "react": "^18.0.0"
   }
 }
